@@ -7,7 +7,7 @@
  *      implementation of the pqxx::pipeline class
  *   Throughput-optimized query manager
  *
- * Copyright (c) 2003-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2003-2012, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -243,7 +243,6 @@ void pqxx::pipeline::issue()
 
 
 void pqxx::pipeline::internal_error(const PGSTD::string &err)
-	throw (PGSTD::logic_error)
 {
   set_error_at(0);
   throw pqxx::internal_error(err);
